[package]
name = "mural_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4"
rand = { version = "0.8", features = ["std"] }
secp256k1 = { version = "0.29.0", features = ["rand"] }
tiny-keccak = "2.0"
tokio = { version = "1", features = ["full"] }
web3 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
